# phimtor

./: .gitignore  Makefile  README.md
.github/workflows/: build_admin.yml  build_and_deploy_server.yml  build_desktop.yml  build_flutter_app.yml  build_server.yml  deploy_admin.yml  deploy_server.yml  dev_desktop.yml  release_desktop.yml  release_phimtor_app.yml  test.yml  workflow_dev.yml  workflow_dev_desktop.yml  workflow_dev_server.yml  workflow_prod.yml  workflow_prod_desktop.yml  workflow_prod_release_app.yml  workflow_prod_server.yml
.run/: desktop.run.xml  server.run.xml
api/openapi/: phimtor_api.yml  phimtor_api_v2.yml
common/: go.mod  go.sum
common/errors/: errors.go
common/logs/: zerolog.go
common/strval/: bool.go  int.go
desktop/: .air.toml  Makefile  go.mod  go.sum  main.go
desktop/auth/: auth.go  middleware.go  storage.go  token.go  user.go
desktop/client/: client.go
desktop/data/: embed.go
desktop/handler/: handler.go  handler_get_movie.go  handler_get_series.go  handler_get_video.go  handler_home.go  handler_list_shows.go  handler_settings.go  render.go
desktop/i18n/: locale.en.yml  locale.vi.yml  middleware.go
desktop/memstorage/: memory_storage.go
desktop/net/: listener.go
desktop/server/: server.go
desktop/setting/: clean_up.go  storage.go
desktop/subtitle/: normalize.go
desktop/torrent/: info_hash.go  manager.go  manager_add.go  manager_cancel.go  manager_get.go  manager_stats.go
desktop/ui/: helper.go  layout.templ  layout_templ.go  movie.templ  movie_templ.go  series.templ  series_templ.go  settings.templ  settings_templ.go  shows.templ  shows_templ.go  video.templ  video_templ.go
desktop/updater/: updater.go
desktop/upnp/: didl-lite.xml  didl_lite.go  didl_lite_test.go  state.go  upnp.go  upnp_devices.go  upnp_pause.go  upnp_play.go  upnp_stop.go  upnp_test.go
desktop/vlc/: open.go  open_drawin.go  open_unix.go  open_windows.go
migrations/: 1_init_database.up.sql
phimtor_app/: .gitignore  firebase.json  flutter_launcher_icons.yaml  pubspec.yaml
phimtor_app/lib/: firebase_options.dart  lifecycle_manager.dart  locale_provider.dart  main.dart
phimtor_app/macos/: Podfile
phimtor_app/phimtor_openapi_client/: README.md  pubspec.yaml
phimtor_app/phimtor_openapi_client_v2/: README.md  pubspec.yaml
phimtor_app/scripts/: build-android.sh  build-linux.sh  (+2 more)
phimtor_app/torrent/src/: CMakeLists.txt  Makefile  go.sum  main.go
phimtor_app/torrent/src/cmd/server/: main.go
phimtor_app/torrent/src/http/: http_torrent.go  openapi_generated_api.go  openapi_generated_types.go  server.go
phimtor_app/torrent/src/include/: libtorrent.h
phimtor_app/torrent/src/torrent/: config.go  manager.go  manager_add.go  manager_get.go  manager_stats.go
phimtorapp/: README.md  pubspec.yaml
scripts/: openapi-client.sh  openapi-dart-client.sh  openapi-http.sh
server/: .env.example  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  main.go  sqlboiler.toml
(+587 files in other folders)
